# ros2-dev-challenge

./: .flake8  .pylintrc  Dockerfile  README.md  requirements-dev.txt  ros_entrypoint.sh  run_linting.sh
.github/workflows/: ci.yml
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: SineWave.msg
custom_interfaces/srv/: ProcessImage.srv
ros2_wave_pkg/: .flake8  package.xml  setup.cfg  setup.py
ros2_wave_pkg/config/: publisher_params.yaml  sine_wave_publisher_params.yaml  sine_wave_subscriber_params.yaml  subscriber_params.yaml
ros2_wave_pkg/launch/: wave_nodes.launch.py
ros2_wave_pkg/ros2_wave_pkg/: sine_wave_publisher_node.py  sine_wave_subscriber_node.py
ros2_wave_pkg/test/: test_flake8.py  test_node_communication.py  test_nodes_comms_and_props.py  test_wave_nodes.py
